Alignment issue in show meta data section

--- a/src/common/side-content/side-content.less
+++ b/src/common/side-content/side-content.less
@@ -107,7 +107,7 @@ div.side-content{
 }
 .left100
 {
-  left:100px;
+  left:120px;
 }
 .cblack
 {
